fix styles at feed list add style for scrollbar for all app

--- a/src/components/feed-board/feed-board.module.css
+++ b/src/components/feed-board/feed-board.module.css
@@ -14,12 +14,12 @@
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	/*display: flex;*/
-	/*flex-direction: column;*/
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+	grid-auto-flow: column;
 	gap: 8px;
 }
+
 
 .counter {
 	text-shadow: 0 0 16px rgb(51 51 255 / 25%), 0 0 8px rgb(51 51 255 / 25%), 0 4px 32px rgb(51 51 255 / 50%);
