--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@ body {
 .input_size_default {
 	width: 480px;
 }
+
+::-webkit-scrollbar {
+	width: 8px;
+	background-color: #2f2f37;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #8585ad;
+	border: 3px solid #8585ad;
+}
